--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "van-electron-template",
+  "name": "van-el-template",
   "version": "0.0.1",
   "description": "A starter electron template",
   "main": "main.js",
@@ -8,7 +8,7 @@
     "build": "webpack",
     "build:main": "webpack --config-name main",
     "electron": "electron ./dist/main.js",
-    "server": "webpack-dev-server --config-name renderer"
+    "dev": "webpack-dev-server --config-name renderer"
   },
   "repository": "",
   "keywords": [
@@ -24,15 +24,20 @@
     "@babel/plugin-proposal-class-properties": "^7.2.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.2.0",
     "@babel/preset-env": "^7.2.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/react": "^16.7.17",
     "babel-loader": "^8.0.4",
+    "electron-devtools-installer": "^2.2.4",
     "html-webpack-plugin": "^3.2.0",
     "npm-run-all": "^4.1.5",
     "react-hot-loader": "^4.6.2",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.3.1",
     "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-loader": "^3.5.4",
+    "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.2.2",
     "webpack": "^4.27.1",
@@ -40,6 +45,10 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "electron": "^3.0.7"
+    "@babel/polyfill": "^7.0.0",
+    "@types/react-dom": "^16.0.11",
+    "electron": "^3.0.7",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
